<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_light"
    tools:context=".ShapesActivity">

    <com.melnykov.fab.ObservableScrollView
        android:id="@+id/shape_value_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/content_margin_medium"
        android:layout_marginTop="@dimen/content_margin_medium"
        android:layout_marginRight="@dimen/content_margin_medium"
        android:layout_marginBottom="@dimen/content_margin_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linearLayout"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:gravity="center"
                android:id="@+id/tableLayout"
                android:paddingLeft="@dimen/content_margin_medium"
                android:paddingRight="@dimen/content_margin_medium">

                <TableRow>
                    <TextView
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/shapeRadius"
                    android:id="@+id/textRadius"
                    android:textColor="@color/black"
                    android:layout_column="0"
                    android:singleLine="true" />

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/shapeR"
                        android:id="@+id/textR"
                        android:textColor="@color/black"
                        android:layout_column="0"
                        android:singleLine="true" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:id="@+id/editRadius"
                        android:background="@color/white"
                        android:textColor="@color/black"
                        android:layout_column="1"
                        android:singleLine="true"
                        android:scrollHorizontally="true"
                        android:layout_marginBottom="12dp" />

                    <requestFocus />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="30dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/shapeHeight"
                        android:id="@+id/textInput2"
                        android:textColor="@color/black"
                        android:layout_column="0"
                        android:singleLine="true" />

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/shapeH"
                        android:id="@+id/textH"
                        android:textColor="@color/black"
                        android:layout_column="0"
                        android:singleLine="true" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:id="@+id/editHeight"
                        android:background="@color/white"
                        android:textColor="@color/black"
                        android:layout_column="1"
                        android:singleLine="true"
                        android:scrollHorizontally="true"
                        android:layout_marginBottom="30dp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="30dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/shapeVolume"
                        android:id="@+id/textVolume"
                        android:textColor="@color/black"
                        android:layout_column="0"
                        android:singleLine="true" />

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/shapeV"
                        android:id="@+id/textV"
                        android:textColor="@color/black"
                        android:layout_column="0"
                        android:singleLine="true" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:ems="10"
                        android:inputType="none"
                        android:id="@+id/editVolume"
                        android:background="@color/white"
                        android:textIsSelectable="false"
                        android:textColor="@color/black"
                        android:layout_column="1"
                        android:singleLine="true"
                        android:scrollHorizontally="true"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:layout_marginBottom="12dp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="30dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/shapeSurface"
                        android:id="@+id/textSurface"
                        android:textColor="@color/black"
                        android:layout_column="0"
                        android:singleLine="true" />

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/shapeS"
                        android:id="@+id/textS"
                        android:textColor="@color/black"
                        android:layout_column="0"
                        android:singleLine="true" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:inputType="none"
                        android:ems="10"
                        android:id="@+id/editSurface"
                        android:background="@color/white"
                        android:textColor="@color/black"
                        android:layout_column="1"
                        android:singleLine="true"
                        android:scrollHorizontally="true"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false" />
                </TableRow>
            </TableLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_marginLeft="@dimen/image_margin"
                android:layout_marginRight="@dimen/image_margin"
                android:scaleType="fitStart" />
        </LinearLayout>
    </com.melnykov.fab.ObservableScrollView>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/purple"
        android:src="@drawable/ic_action_submit"
        app:borderWidth="0dp"
        app:fabSize="normal"
        android:scaleType="center" />


</RelativeLayout>
